--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,9 @@ project(nmines)
 find_package(Curses REQUIRED)
 include_directories(${CURSES_INCLUDE_DIR})
 
-add_executable(nmines src/main.c)
+add_executable(src/main.c)
 target_link_libraries(nmines ${CURSES_LIBRARIES})
+
+install(TARGETS nmines
+        RUNTIME
+        DESTINATION bin)
